--- a/Spring/ss1_EAD/src/main/resources/templates/index.html
+++ b/Spring/ss1_EAD/src/main/resources/templates/index.html
@@ -13,7 +13,7 @@
 <section class="container">
     <h1>Choose your Option</h1>
     <a th:href="@{/adduser}" class="btn btn-success">Add User</a>
-    <a th:href="@{/listuser.html}" class="btn btn-dark">List User</a>
+    <a th:href="@{/listuser}" class="btn btn-primary">List User</a>
 </section>
 
 </body>
