--- a/Spring/ss1_EAD/src/main/resources/templates/adduser.html
+++ b/Spring/ss1_EAD/src/main/resources/templates/adduser.html
@@ -14,6 +14,7 @@
 <div class="container">
     <div class="row">
         <div class="col-6">
+            <h1>Add User</h1>
             <form method="post" th:action="@{/adduser}" th:object="${user}">
                 <div class="mb-3">
                     <label for="name" class="form-label">Name</label>
